--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "node scripts/update_meta.js && next dev",
+    "build": "node scripts/update_meta.js && next build",
     "start": "next start"
   },
   "repository": {
