--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@giscus/react": "^3.1.0",
     "gray-matter": "^4.0.3",
+    "mermaid": "^11.12.2",
     "next": "^14.2.35",
     "nextra": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
